fixed spacing to single page; fixed distance by factor of 2

--- a/routes/static/routes/css/base.css
+++ b/routes/static/routes/css/base.css
@@ -1,3 +1,8 @@
+/* modify base html to remove vertical scrollbar default */
+/* html {
+  overflow-y: hidden;
+} */
+
 #loading {
   height: 100vh;
   width: 100vw;
